# themefather

./: .env.example  Cargo.toml  LICENSE  README.md
assets/themes/: template_android_theme.txt  template_ios_theme.txt  template_macos_theme.txt  template_tdesktop_theme.txt
src/: assets.rs  constants.rs  main.rs  models.rs  openai_client.rs  prompts.rs  responses.rs  synthesizer.rs
